--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <h1>Testyourlog.in</h1>
     <h2>A generator to get you started with automated functional testing.</h2>
 
-    <p>Testyourlog.in will create for you a custom <a href="http://webdriver.io">WebdriverIO</a> test script for testing the login/registration process on your site. It will include installation instructions and be customized to your specific website, including URLs, elements and messages.</p>
+    <p>Testyourlog.in will create for you a custom <a href="http://webdriver.io">WebdriverIO</a> script for testing the login/registration process on your site. It will include installation instructions and be customized to your specific website, including URLs, elements and messages.</p>
 
     <p>I just came up with this idea and need to develop the script. In the meantime, you can sign up to be notified when this is ready to go.</p>
 
