--- a/index.html
+++ b/index.html
@@ -131,16 +131,16 @@
 
   <div class="container">
     <h1>Testyourlog.in</h1>
-    <h2>A generator to get you started with automated functional testing.</h2>
+    <h2>A helping hand to start with automated functional testing.</h2>
 
-    <p>Testyourlog.in will create for you a custom <a href="http://webdriver.io">WebdriverIO</a> script for testing the login/registration process on your site. It will include installation instructions and be customized to your specific website, including URLs, elements and messages.</p>
+    <p>Testyourlog.in will create <a href="http://webdriver.io">WebdriverIO</a> script customized to your site's login/registration process. It will include installation instructions and be tailored to your specific website, including URLs, elements and messages.</p>
 
-    <p>I just came up with this idea and need to develop the script. In the meantime, you can sign up to be notified when this is ready to go.</p>
+    <p>The code is still in development. In the meantime, you can sign up to be notified when it's ready to use.</p>
 
     <div id="mc_embed_signup">
       <form action="//kevinlamping.us10.list-manage.com/subscribe/post?u=17d67d558ef439917f81518bc&amp;id=183e1c02bc" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">
-            <h2>Notify me when this thing is ready!</h2>
+            <h2>Let me know when this thing is ready!</h2>
             <div class="form-items">
               <div class="form-item">
                 <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your Email Address">
@@ -153,7 +153,7 @@
               </div>
             </div>
             <br>
-            <p><em>I promise not to spam. This isn't signing you up for a regular mailing list, just a notification or two when the site launches.</em></p>
+            <p><em>I promise not to spam. This isn't signing you up for a regular mailing list, just a notification or two when the app launches.</em></p>
           </div>
       </form>
     </div>
