add sponsor message

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
   <div class="container">
     <h1>Testyourlog.in</h1>
-    <h2>A helping hand to start with automated functional testing.</h2>
+    <h2>A helping hand to get you going with automated functional testing.</h2>
 
     <p>Testyourlog.in will create <a href="http://webdriver.io">WebdriverIO</a> script customized to your site's login/registration process. It will include installation instructions and be tailored to your specific website, including URLs, elements and messages.</p>
 
@@ -156,8 +156,10 @@
             <p><em>I promise not to spam. This isn't signing you up for a regular mailing list, just a notification or two when the app launches.</em></p>
           </div>
       </form>
+      <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+      <!--End mc_embed_signup-->
     </div>
-    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-    <!--End mc_embed_signup-->
+    <p style="margin:1em 0 0;">Sponsored by <a href="http://learn.webdriver.io">learn.webdriver.io</a></p>
+  </div>
 </body>
 </html>
